; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/opie/extr_opietest.c_testatob8.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/opie/extr_opietest.c_testatob8.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.opie_otpkey = type { i32 }

@testatob8.testin = internal global [17 x i8] c"0123456789abcdef\00", align 16
@testatob8.testout = internal global [4 x i8] c"\01#Eg", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @testatob8() #0 {
  %1 = alloca i32, align 4
  %2 = alloca %struct.opie_otpkey, align 4
  %3 = call i32 @opieatob8(%struct.opie_otpkey* %2, i8* getelementptr inbounds ([17 x i8], [17 x i8]* @testatob8.testin, i64 0, i64 0))
  %4 = icmp ne i32 %3, 0
  br i1 %4, label %6, label %5

5:                                                ; preds = %0
  store i32 -1, i32* %1, align 4
  br label %11

6:                                                ; preds = %0
  %7 = call i64 @memcmp(%struct.opie_otpkey* %2, i8* getelementptr inbounds ([4 x i8], [4 x i8]* @testatob8.testout, i64 0, i64 0), i32 4)
  %8 = icmp ne i64 %7, 0
  br i1 %8, label %9, label %10

9:                                                ; preds = %6
  store i32 -1, i32* %1, align 4
  br label %11

10:                                               ; preds = %6
  store i32 0, i32* %1, align 4
  br label %11

11:                                               ; preds = %10, %9, %5
  %12 = load i32, i32* %1, align 4
  ret i32 %12
}

declare dso_local i32 @opieatob8(%struct.opie_otpkey*, i8*) #1

declare dso_local i64 @memcmp(%struct.opie_otpkey*, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
